--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ProgramConnection": "Server=DESKTOP-KETI-1K\\SQLEXPRESS; Database=Program; User=sa; Password=1234; Trust Server Certificate=True" // Trusted_Connection=True;  User=sa; Password=1234;
+    "ProgramConnection": "Server=DESKTOP-KETI-1K\\SQLEXPRESS; Database=EntityFramework; User=sa; Password=1234; Trust Server Certificate=True" // Trusted_Connection=True;  User=sa; Password=1234;
   }
   
 }
